12-kubernetes/base/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: eugene-wcg
  labels:
    app: wcg
spec:
  rules:
  - host: wcg.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wcg
            port: 
              number: 8888
